# murakami

./: .gitignore  .travis.yml  AGENTS.md  BUILD.md  CONTRIBUTING.md  Dockerfile  Dockerfile.template  INSTALL-MURAKAMI-BALENA-CLOUD.md  INSTALL-MURAKAMI-LOCAL-MANAGED.md  INSTALL-MURAKAMI-STANDALONE.md  README.md  RUN-MURAKAMI-TESTS.md  RUN-MURAKAMI-WITHOUT-DOCKER.md  custom-config.json  murakami.toml  murakami.toml.example  pyproject.toml
.github/workflows/: ci.yml
configs/: murakami.config.example  murakami.toml.example  ndt-custom-config.json.example
docs/: ADDING-NEW-TEST-RUNNERS.md  BUILD.md  CONFIGURING-MURAKAMI.md  CONVERT-DATA.md  GCLOUD-DEMO.md  INSTALL-MURAKAMI-BALENA-CLOUD.md  INSTALL-MURAKAMI-LOCAL-MANAGED.md  INSTALL-MURAKAMI-STANDALONE.md  SUPPORTED-TEST-RUNNERS.md  UPLOAD-UTILITY.md  USING-MURAKAMI-VIZ.md
docs/example-test-output/: dash-_LOCATION-_NETWORK_TYPE-_CONNECTION_TYPE-test_datetime.jsonl  ndt5-_LOCATION-_NETWORK_TYPE-_CONNECTION_TYPE-test_datetime.jsonl  ndt7-_LOCATION-_NETWORK_TYPE-_CONNECTION_TYPE-test_datetime.jsonl  ookla-official.json  ookla-speedtest-_LOCATION-_NETWORK_TYPE-_CONNECTION_TYPE-test_datetime.jsonl  ooniprobe-circumvention-_LOCATION-_NETWORK_TYPE-_CONNECTION_TYPE-test_datetime.jsonl  ooniprobe-im-_LOCATION-_NETWORK_TYPE-_CONNECTION_TYPE-test_datetime.jsonl  ooniprobe-middlebox-_LOCATION-_NETWORK_TYPE-_CONNECTION_TYPE-test_datetime.jsonl  ooniprobe-websites-_LOCATION-_NETWORK_TYPE-_CONNECTION_TYPE-test_datetime.jsonl  speedtest-cli-multi-stream-_LOCATION-_NETWORK_TYPE-_CONNECTION_TYPE-test_datetime.jsonl  speedtest-cli-single-stream-_LOCATION-_NETWORK_TYPE-_CONNECTION_TYPE-test_datetime.jsonl
murakami/: __init__.py  __main__.py  defaults.py  errors.py  exporter.py  multiple_things_runner.py  runner.py  server.py  thing.py  utils.py
murakami/exporters/: gcs.py  http.py  local.py  scp.py  scpexporter.py
murakami/runners/: dash.py  libndt.py  libndt5.py  libndt7.py  ndt5.py  ndt5custom.py  ndt7.py  ndt7custom.py  ooniprobe.py  speedtest-single.py  speedtest.py  speedtestsingle.py  wehe.py
murakami/selection/: all.py  rand.py
scripts/: convert.py  upload.py
tests/: test_exporter.py  test_gcs_exporter.py  test_http.py  test_key_loading.py  test_murakami.py  test_ndt7.py  test_scp_exporter.py
utilities/: bq_load_murakami.sh  encode_key.sh  keys.py  setup_balena_device.sh  setup_bq.sh
utilities/schemas/: locationsMetaSchema.json  ndt5Schema.json  speedtestSchema.json
