[tool.poetry]
name = "murakami"
version = "0.1.0"
description = "A webthings-compliant network measurement tool from M-Lab."
authors = ["Josh King <josh@throneless.tech>", "Rae Gaines <rae@throneless.tech>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/throneless-tech/murakami"

[tool.poetry.scripts]
murakami = 'murakami.__main__:main'

[tool.poetry.dependencies]
python = "^3.6"
webthing = "^0.12.0"
configargparse = "^0.14.0"
tomlkit = "^0.5.5"
apscheduler = "^3.6"
paramiko = "^2.6"
scp = "^0.13.2"
jsonlines = "^1.2"
livejson = "^1.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.4"
portray = "^1.3"
pdocs = "^1.0"

[tool.poetry.plugins."murakami.runners"]
"dash" = "murakami.runners.dash:DashClient"
"ndt5" = "murakami.runners.libndt5:LibndtClient"
"ndt7" = "murakami.runners.libndt7:LibndtClient"
"speedtest" = "murakami.runners.speedtest:SpeedtestClient"

[tool.poetry.plugins."murakami.exporters"]
"local" = "murakami.exporters.local:LocalExporter"
"scp" = "murakami.exporters.scp:SCPExporter"
"gcs" = "murakami.exporters.gcs:GCSExporter"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
